# TileDB-CF-Py

./: .editorconfig  .flake8  .gitignore  .mypy.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  README.md  SPECIFICATION.md  _quarto.yml  pyproject.toml  requirements_dev.txt  setup.cfg  tiledb-cf-spec.md
.github/workflows/: ci-full.yml  ci.yml  quarto-render.yml  release.yml
docs/: Makefile  api.rst  make.bat  robots.txt  search.json  sitemap.xml
docs/documentation/: code-of-conduct.html  contributing.html  core.html  index.html  netcdf-engine.html  tiledb-cf-spec.html  xarray-engine.html
docs/documentation/api/: cf.ArrayMetadata.html  cf.AttrMetadata.html  cf.DataspaceCreator.html  cf.DimMetadata.html  cf.NetCDF4ConverterEngine.html  cf.copy_data_from_xarray.html  cf.copy_metadata_from_xarray.html  cf.create_group.html  cf.create_group_from_xarray.html  cf.creator.ArrayCreator.html  cf.creator.AttrCreator.html  cf.creator.DimCreator.html  cf.creator.DomainCreator.html  cf.creator.SharedDim.html  cf.from_netcdf.html  cf.from_xarray.html  cf.netcdf_engine.NetCDF4ArrayConverter.html  cf.netcdf_engine.NetCDF4CoordToDimConverter.html  cf.netcdf_engine.NetCDF4DimToDimConverter.html  cf.netcdf_engine.NetCDF4DomainConverter.html  cf.netcdf_engine.NetCDF4ScalarToDimConverter.html  cf.netcdf_engine.NetCDF4ToDimConverter.html  cf.netcdf_engine.NetCDF4VarToAttrConverter.html  cf.open_group_array.html  index.html
docs/examples/core/: group-basics.html
docs/examples/netcdf_engine/: netcdf-to-tiledb-basics.html  netcdf-to-tiledb-set-max-fragment-size.html  netcdf-to-tiledb-set-tiles.html
docs/examples/xarray_engine/: tiledb-xarray-basics.html  (+1 more)
docs/source/: api.rst  conf.py  core.rst  data-model.rst  index.rst  install.rst  intro.rst  netcdf-engine.rst  overview.rst  quick-start.rst  tiledb-cf-spec.rst  tutorial.rst  xarray-engine.rst
documentation/: code-of-conduct.md  contributing.md  core.md  index.md  netcdf-engine.md  overview.md  tiledb-cf-spec.md  xarray-engine.md
examples/: README.md  Xarray_Datashader_vis.ipynb  convert.ipynb  create_groups.ipynb  examples.md  groups.ipynb  tutorial_groups.ipynb  xarray.ipynb
examples/GOES-R/: ingest-abi-single-band.ipynb
examples/GOES-R/data/: fetch_data.sh
examples/core/: group-basics.ipynb
examples/netcdf_engine/: netcdf-to-tiledb-basics.ipynb  netcdf-to-tiledb-set-max-fragment-size.ipynb  netcdf-to-tiledb-set-tiles.ipynb
examples/xarray_engine/: tiledb-xarray-basics.ipynb  tiledb-xarray-partially-filled-arrays.ipynb
src/: conftest.py
tests/: __init__.py  conftest.py  test_array.py  test_array_creator.py  test_array_metadata.py  test_attr_metadata.py  test_attribute_metadata.py  test_cf.py  test_converter_netcdf4_engine.py  test_create_dataspace_group.py  test_data_type.py  test_dataspace.py  test_dataspace_array.py  test_dataspace_creator.py  test_dataspace_group.py  test_dataspace_group_schema.py  test_dataspace_schema.py  test_group.py  test_group_schema.py  test_netcdf4_engine.py  test_shared_dimension.py  tests_dataspace_map.py
tests/core/: test_array_creator.py  test_array_metadata.py  test_attr_metadata.py  test_dataspace_creator.py  test_dim_metadata.py  test_fragment_writer.py  test_group.py  test_group_refactor.py  test_group_schema.py  test_shared_dimension.py  test_virtual_group.py  test_write_array.py
tests/creator/: test_array_creator.py  test_dataspace_creator.py  test_shared_dimension.py
tests/netcdf_engine/: conftest.py  test_cli_netcdf_convert.py  test_convert_multifragments.py  test_convert_timestamp.py  test_netcdf4_converter_array.py  test_netcdf4_converter_engine.py  test_netcdf4_to_dim_base.py  test_netcdf4_to_dim_converter.py  test_netcdf_coord_to_dim_converter.py  test_open_netcdf_group.py  test_utils.py
tests/xarray_engine/: conftest.py  test_from_xarray.py  test_partial_filled.py  test_partially_filled.py  test_plugin.py  test_plugin_distributed.py  test_plugin_group.py  test_plugin_timestamp.py  test_xr_plugin.py
tiledb/cf/: __init__.py  __main__.py  _utils.py  cli.py  core.py  creator.py  io.py  testing.py
tools/: lint.sh
tools/hooks/: pre-commit.sh
(+67 files in other folders)
