[tool.poetry]
name = "tiledb-cf"
version = "0.1.0"
description = "TileDB Python library for supporting Climate and Forecast datasets."
authors = ["TileDB. Inc"]
license = "MIT"
readme = "README.md"
keywords = ["tiledb-cf"]
repository = "https://github.com/TileDB-Inc/tiledb-cf"
packages = [
    { include = "tiledb/cf", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Source" = "https://github.com/TileDB-Inc/tiledb-cf"
"Documentation" = "https://tiledb-cf.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
tiledb = "^0.6.0"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
black = "^20.8.b1"
flake8 = "^3.8.4"
isort = "^5.0.0"
mypy = "^0.790"
pip = "^19.2.3"
pylint = "^2.6.0"
pytest = "^4.6.5"
pytest-cov = "^2.0"
Sphinx = "^3.3.0"
tox = "^3.14.0"
wheel = "^0.33.6"

[tool.poetry.plugins."console_scripts"]
"tiledb.cf" = "tiledb.cf.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | docs
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.tox]
legacy_tox_ini="""
[tox]
isolated_build = true
minversion = 3.18.0
envlist = py37, py38

[testenv]
allowlist_externals = poetry
commands =
    poetry install -vv --no-root
    poetry run pytest tests/
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
