[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | docs
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
markers = [
    "flaky: flaky tests",
    "network: tests requiring a network connection",
]
