[metadata]
name = tiledb-cf
version = 0.2.0
description = TileDB Python library for supporting Climate and Forecast datasets.
author = TileDB, Inc.
author_email = help@tiledb.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = tiledb, climate, forecast, netcdf
url = https://github.com/TileDB-Inc/TileDB-CF-Py
project_urls =
    Documentation = https://docs.tiledb.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development

[options]
packages =
    tiledb.cf
    tiledb.cf.engines
python_requires = >=3.7
install_requires =
    numpy >= 1.16.5
    setuptools >= 40.4
    tiledb >= 0.8.3
    click >= 0.7.0

[options.extras_require]
docs =
     Sphinx
     sphinx-autodoc-typehints
     sphinx-rtd-theme

netCDF4 = netCDF4

examples = matplotlib

[options.entry_points]
console_scripts =
    tiledb-cf = tiledb.cf:cli

[flake8]
ignore = E41,E203,E226,E302,E402,W503
max-line-length = 88
exclude = docs/* ./.*
max-complexity = 10
per-file-ignores = __init__.py:F401

[mypy]
ignore_missing_imports = True
